# The-AI-Engineer-Challenge

./: MERGE.md  pyproject.toml
.cursor/rules/: branch-development-rule.mdc
aimakerspace/: vectordatabase.py
aimakerspace/openai_utils/: chatmodel.py  embedding.py
api/: app.py  requirements.txt  vercel.json
frontend/: README.md  next.config.js  package-lock.json  package.json  react-syntax-highlighter.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat-pdf/: route.ts
frontend/app/api/pdfs/: route.ts
frontend/app/api/upload-pdf/: route.ts
frontend/app/api/upload-pdf-url/: route.ts
