[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-ai-engineer-challenge"
version = "0.1.0"
description = "AI Engineer Challenge project with PDF RAG capabilities"
authors = [
    {name = "AI Engineer", email = "engineer@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/example/the-ai-engineer-challenge"
Repository = "https://github.com/example/the-ai-engineer-challenge"

[tool.hatch.build.targets.wheel]
packages = ["aimakerspace"]
